bin/tests/snapshots/empty_list_concat__fix_676800f4240e26802590a123362636e6d87461d7e091b87b44fb8b5959b31b1a.snap
---
source: bin/tests/empty_list_concat.rs
expression: "\"[1 2 3] ++ []\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[1 2 3] ++ []
+[1 2 3]
