bin/tests/snapshots/empty_list_concat__fix_b13b2273654200cbc2315c6ceec0dbc9e4479628a5b7250418efeb5911e743b2.snap
---
source: bin/tests/empty_list_concat.rs
expression: "\"[] ++ [] ++ []\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[] ++ [] ++ []
+[]
