bin/tests/snapshots/empty_list_concat__fix_b6d6b2d3b0ff0b3b842e3f816ced62ca22410c59471e767d80ea85a3f7fcc1ef.snap
---
source: bin/tests/empty_list_concat.rs
expression: "\"[] ++ [1 2 3]\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-[] ++ [1 2 3]
+[1 2 3]
