bin/tests/snapshots/empty_list_concat__lint_df1c6ef98c749f5c410a485b3d0d5d6851ad340d059d1012ed809a04a21a00a9.snap
---
source: bin/tests/empty_list_concat.rs
expression: "\"[] ++ []\""
---
[W23] Warning: Unnecessary concatenation with empty list
   ╭─[<temp_file_path>:1:1]
   │
 1 │ [] ++ []
   · ────┬───  
   ·     ╰───── Concatenation with the empty list, [], is a no-op
───╯
